:wrench: add credit card form

--- a/app/design/frontend/base/default/layout/paymentmodule.xml
+++ b/app/design/frontend/base/default/layout/paymentmodule.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <layout version="0.1.0">
     <mundipagg_checkout_handle>
+        <reference name="head">
+            <action method="addItem">
+                <type>skin_css</type>
+                <name>css/paymentmodule.css</name>
+            </action>
+        </reference>
+
         <reference name="before_body_end">
             <block type="page/html_head" name="extra_js" as="extra_js" after="-" template="paymentmodule/extras.phtml">
                 <action method="addItem">
@@ -9,9 +16,9 @@
                 </action>
             </block>
 
-            <block type="core/text" name="pagarme.cdn.js.checkout" ifconfig="payment/pagarme_checkout/active">
+            <block type="core/text" name="mundipagg.cdn.js.checkout">
                 <action method="setText">
-                    <text><![CDATA[<script src="https://assets.pagar.me/checkout/checkout.js" type="text/javascript"></script>]]></text>
+                    <text><![CDATA[<script src="https://commerce.mundipagg.com/checkout.js" type="text/javascript"></script>]]></text>
                 </action>
             </block>
         </reference>
