--- a/app/design/frontend/base/default/template/paymentmodule/form/boleto.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/boleto.phtml
@@ -1,6 +1,6 @@
 <?php $_code = $this->getMethodCode(); ?>
 <fieldset>
-    <ul id="payment_form_<?php echo $_code ?>" style="display:none;">
+    <ul id="payment_form_<?php echo $_code; ?>" style="display:none;">
         <li>
             <div id="mundipagg_boleto">
                 <ul >
