--- a/app/design/frontend/base/default/layout/paymentmodule.xml
+++ b/app/design/frontend/base/default/layout/paymentmodule.xml
@@ -14,6 +14,10 @@
                     <type>js</type>
                     <name>mundipagg/paymentmodule.js</name>
                 </action>
+                <action method="addItem">
+                    <type>js</type>
+                    <name>mundipagg/formoperations.js</name>
+                </action>
             </block>
         </reference>
     </mundipagg_checkout_handle>
