--- a/app/design/frontend/base/default/template/paymentmodule/form/creditcard.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/creditcard.phtml
@@ -29,16 +29,16 @@
                             <select
                                     class="required-entry"
                                     id="mundicheckout-expmonth"
-                                    onchange="getFormData()"
+                                    onchange="getFormData();"
                                     name="payment[creditCardExpMonth]">
                                     <option value="">--- Selecione --- </option>
-                                <?php for ($month = 1; $month < 13; $month++ ) { ?>
-                                    <option value="<?php echo $month; ?>">
-                                        <?php
-                                            echo str_pad($month, "2", "0", STR_PAD_LEFT);
-                                        ?>
-                                    </option>
-                                <?php } ?>
+                                    <?php for ($month = 1; $month < 13; $month++ ) { ?>
+                                        <option value="<?php echo str_pad($month, "2", "0", STR_PAD_LEFT); ?>">
+                                            <?php
+                                                echo str_pad($month, "2", "0", STR_PAD_LEFT);
+                                            ?>
+                                        </option>
+                                    <?php } ?>
 
                             </select><br>
 
@@ -46,15 +46,19 @@
                             <select
                                 class="required-entry"
                                 id="mundicheckout-expyear"
-                                onchange="getFormData()"
+                                onchange="getFormData();"
                                 name="payment[creditCardExpYear]">
                                     <option value="">--- Selecione --- </option>
-                                <?php for ($year = date("Y"); $year < date("Y") + 11; $year++ ) { ?>
-                                    <option value="<?php echo $year; ?>"><?php echo $year; ?></option>
-                                <?php } ?>
+                                    <?php for ($year = date("Y"); $year < date("Y") + 11; $year++ ) { ?>
+                                        <option value="<?php echo $year; ?>"><?php echo $year; ?></option>
+                                    <?php } ?>
 
                             </select><br>
-
+                            <input
+                                    type="hidden"
+                                    class="validate-mundipagg-creditcard-exp"
+                                    id="mundicheckout-expiration-date"
+                                    name="payment[creditCardExpDate]"><br>
                             <label for="">CVV<span class="required">*</span></label>
                             <input
                                     type="text"
@@ -69,7 +73,6 @@
                             <input
                                     type="hidden"
                                     id="mundicheckout-token"
-                                    class="validate-ajax"
                                     name="payment[creditCardToken]">
                         </div>
                         <p>
@@ -84,11 +87,18 @@
         </li>
     </ul>
     <script type="javascript">
+
+        Validation.add('validate-mundipagg-creditcard-exp', 'Data inválida', function(v) {
+            month = document.getElementById('mundicheckout-expmonth');
+            year = document.getElementById('mundicheckout-expyear');
+            return validateCreditCardExpiration(year.value, month.value);
+        });
+
         Payment.prototype.save = Payment.prototype.save.wrap(function(save) {
             var key = document.getElementById('tokenDiv').getAttribute('data-mundicheckout-app-id');
             var tokenElement = document.getElementById('mundicheckout-token');
-
             var validator = new Validation(this.form);
+
             if (this.validate() && validator.validate()) {
                 getCreditCardToken(key, function (response) {
                     if (response != false) {
@@ -97,9 +107,24 @@
                         save();
                         return;
                     }
+                    tokenElement.value = "";
                     jQuery("#mundipagg-invalid-credit-card").show();
                 });
             }
         });
+
+        function validateCreditCardExpiration(year, month) {
+            var date = new Date();
+            var expDate = new Date(year, month - 1, 1);
+            var today = new Date(date.getFullYear(), date.getMonth(), 1);
+            console.log(expDate);
+            console.log(today);
+            if (expDate < today) {
+                return false;
+            }
+            return true;
+
+
+        }
     </script>
 </fieldset>
