--- a/app/design/frontend/base/default/template/paymentmodule/form/creditcard.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/creditcard.phtml
@@ -6,7 +6,7 @@
                 <ul >
                     <li style="clear:both">
                         <div class="input-box"  id="tokenDiv" data-mundicheckout-app-id="<?php echo $this->getPublicKey(); ?>">
-
+                            <?php var_dump($this->getInstallments()); ?>
                             <div class="input-box">
                                 <img
                                         src="https://dashboard.mundipagg.com/emb/images/brands/amex.jpg"
@@ -108,11 +108,12 @@
                             <label for="">Parcelamento<span class="required">*</span></label>
                             <div class="input-box">
                                 <select
-                                        class="validate-one-required"
+                                        class=""
                                         name="payment[creditCardInstallments]"
                                         onchange="getFormData();"
                                 >
-
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
                                 </select>
                                 <br>
                             </div>
